Alignment fix

--- a/public/style.css
+++ b/public/style.css
@@ -206,8 +206,6 @@ button {
     color: #FFFFFF;
     width: 100%;
     transition: box-shadow 100ms ease-in-out;
-    display: flex;
-    align-items: center;
 }
 
 button:hover {
